--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -35,9 +35,9 @@ body,input,textarea,select,button{
 }
 
 @media(max-width:720px){
-  html{font-size: 87.5%;}
+  html{font-size: 87.5%;} // vai gerar 14px
 }
 
 @media(max-width:720px){
-  html{font-size: 93.75%;}
+  html{font-size: 93.75%;} // vai gerar 15px
 }
